--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
 }
@@ -46,7 +46,7 @@ a {
     font-weight: 700;
     color: #4D5AE5;
     vertical-align: middle;
-    line-height: 1.17;
+    line-height: 1.17px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
