--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ p {
 
 h1 {
     font-size: 56px;
-    line-height: 60px;
+    line-height: 1.07;
     font-weight: 700;
     color: #FFFFFF;
 }
@@ -34,6 +34,7 @@ h3 {
     line-height: 24px;
     font-weight: 500;
     color: #2E2F42;
+    letter-spacing: 0.02em
 }
 
 a {
@@ -115,7 +116,7 @@ a {
 }
 
 .section_solution_h1 {
-    line-height: 1.07px;
+    line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
 }
