--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ h1 {
     line-height: 1.07;
     font-weight: 700;
     color: #FFFFFF;
+    text-align: center;
+    letter-spacing: 0.02em;
 }
 
 h2 {
@@ -116,9 +118,7 @@ a {
 }
 
 .section_solution_h1 {
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
+    
 }
 
 .button_order {
@@ -143,7 +143,7 @@ a {
     cursor: pointer;
 }
 
-.button_order:hover {
+.button_order:focus {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
