--- a/css/styles.css
+++ b/css/styles.css
@@ -122,11 +122,15 @@ a {
 }
 
 .section_benefit h3 {
-    line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    line-height: 1.2;
    
+}
+
+.section_benefit p {
+    letter-spacing: 0.02em;
 }
 
 .button_order {
