--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ a {
     background-color: #2e2f42;
 }
 
-.section_solution_h1 {
+.section_solution_title {
     font-size: 56px;
     line-height: 1.07;
     font-weight: 700;
