--- a/css/styles.css
+++ b/css/styles.css
@@ -8,30 +8,8 @@ ul,ol {
     list-style: none;
 }
 
-p {
-    color: #434455;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    
-}
 
 
-
-h2 {
-    font-size: 36px;
-    line-height: 40px;
-    font-weight: 700;
-    color: #2E2F42;
-}
-
-h3 {
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 500;
-    color: #2E2F42;
-    letter-spacing: 0.02em
-}
 
 a {
     text-decoration: none;
@@ -123,12 +101,26 @@ a {
     background-color: #F4F4FD;
 }
 
-.section_benefit h3 {
-    line-height: 1.11;
-    text-align: center;
+.benefit_title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
-    text-transform: capitalize
-   
+    color: #2e2f42;
+}
+
+.benefit_p {
+    color: #434455;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+}
+h2 {
+    font-size: 36px;
+    line-height: 40px;
+    font-weight: 700;
+    color: #2E2F42;
 }
 
 .button_order {
