--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,6 @@ ul,ol {
 }
 
 
-
-
 a {
     text-decoration: none;
 }
@@ -96,33 +94,6 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
 }
-
-.section_benefit {
-    background-color: #F4F4FD;
-}
-
-.benefit_title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-
-.benefit_p {
-    color: #434455;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-
-}
-h2 {
-    font-size: 36px;
-    line-height: 40px;
-    font-weight: 700;
-    color: #2E2F42;
-}
-
 .button_order {
     font-weight: 500;
     font-size: 16px;
@@ -153,4 +124,45 @@ h2 {
     color: #FFFFFF;
     background-color: #404BBF;
     cursor: pointer;
+}
+
+.section_benefit {
+    background-color: #F4F4FD;
+}
+
+.benefit_title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.benefit_p {
+    color: #434455;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+}
+
+h2 {
+    font-size: 36px;
+    line-height: 40px;
+    font-weight: 700;
+    color: #2E2F42;
+}
+
+.our_team {
+    background-color: #F4F4FD;
+
+}
+
+.our_team_title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    color: #2E2F42;
 }
